@@ -1,4 +1,7 @@
 For 1.20.4
+	- modified file-read function to handle files without an end of line character on last 
+	  line - some older Microsoft-generated files would cause last line to be lost. 
+
 	- change order of actual DEF node pointer saving so that, within a DEFine, the name can
 	  be used. (eg, DEF xx Transform{children Script{field yy USE xx}}
 
